--- a/src/app/components/stepper/stepper.module.css
+++ b/src/app/components/stepper/stepper.module.css
@@ -46,7 +46,7 @@
     border: 1px solid var(--background);
     border-radius: 15px;
     margin: 10px 0;
-    transition: all 1s ease;
+    transition: all 1s ease-out;
 }
 .Step:hover{
     cursor: pointer;
@@ -100,7 +100,7 @@
     border-radius: 5px;
     margin: 15px 0 0;
     background-color: #2196f3;
-    transition: width 0.1s ease;
+    transition: width 0.1s ease-out;
 }
 
 .Step:hover .progressBar{
